[tool.poetry]
name = "octocatalog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
black = "^23.9.1"
boto3 = "^1.28.63"
dbt-metricflow = {extras = ["duckdb"], version = "^0.3.0"}
harlequin = "^1.1.1"
halo = "^0.0.31"
modal = "^0.54.3794"
pre-commit = "^3.4.0"
requests = "^2.31.0"
ruff = "^0.0.292"
sqlfluff-templater-dbt = "^2.3.2"
sqlfluff = "^2.3.2"
tqdm = "^4.66.1"
dbt-duckdb = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
